fix to projects menu spacing and mobile navigation

--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -113,6 +113,7 @@
 				display: none;
 			}
 			li {
+				margin-bottom: 0;
 				display: inline-block;
 				&.active {
 					background-color: white;
